--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 
                 </div>
-                <a href="#" class="foot_bottom">let's Talk</a>
+                <a href="#" class="foot_bottom">Let's Talk</a>
 
 
             </div>
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 </body>
 
